--- a/index.html
+++ b/index.html
@@ -135,14 +135,16 @@
                         </div>
                         <div class="feature__info">
                             <h3 class="feature__title">
-                                The outdoor environment is age-appropriate to play
+                                The outdoor environment is age-appropriate to
+                                play
                             </h3>
                             <p class="feature__desc">
-                                Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Perferendis facilis natus illum incidunt
-                                quasi, aperiam eligendi iste illo soluta obcaecati
-                                repellendus, id libero excepturi explicabo corrupti
-                                ex placeat odit quidem!
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Perferendis facilis natus
+                                illum incidunt quasi, aperiam eligendi iste illo
+                                soluta obcaecati repellendus, id libero
+                                excepturi explicabo corrupti ex placeat odit
+                                quidem!
                             </p>
                             <ul class="feature-intro__list">
                                 <li class="feature-intro__item">
@@ -175,34 +177,200 @@
                         </div>
                         <div class="feature__info">
                             <h3 class="feature__title">
-                                The outdoor environment is age-appropriate to play
+                                The outdoor environment is age-appropriate to
+                                play
                             </h3>
                             <p class="feature__desc">
-                                Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Perferendis facilis natus illum incidunt
-                                quasi, aperiam eligendi iste illo soluta obcaecati
-                                repellendus, id libero excepturi explicabo corrupti
-                                ex placeat odit quidem!
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Perferendis facilis natus
+                                illum incidunt quasi, aperiam eligendi iste illo
+                                soluta obcaecati repellendus, id libero
+                                excepturi explicabo corrupti ex placeat odit
+                                quidem!
                             </p>
                             <ul class="feature-intro__list">
-                                <li class="feature-intro__item feature-intro__item--circle">
+                                <li
+                                    class="feature-intro__item feature-intro__item--circle"
+                                >
                                     Lorem ipsum dolor sit amet
                                 </li>
-                                <li class="feature-intro__item feature-intro__item--circle">
+                                <li
+                                    class="feature-intro__item feature-intro__item--circle"
+                                >
                                     Lorem ipsum dolor sit amet
                                 </li>
-                                <li class="feature-intro__item feature-intro__item--circle">
+                                <li
+                                    class="feature-intro__item feature-intro__item--circle"
+                                >
                                     Lorem ipsum dolor sit amet
                                 </li>
-                                <li class="feature-intro__item feature-intro__item--circle">
+                                <li
+                                    class="feature-intro__item feature-intro__item--circle"
+                                >
                                     Lorem ipsum dolor sit amet
                                 </li>
                             </ul>
-                            <a href="#" class="btn btn--primary btn--rounded"
-                                >Visit Now</a
-                            >
                         </div>
                     </div>
+                    <div class="feature__item">
+                        <div class="feature__image">
+                            <img
+                                src="https://cdn.jpegmini.com/user/images/slider_puffin_jpegmini_mobile.jpg"
+                                alt=""
+                            />
+                        </div>
+                        <div class="feature__info">
+                            <h3 class="feature__title">
+                                The outdoor environment is age-appropriate to
+                                play
+                            </h3>
+                            <p class="feature__desc">
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Perferendis facilis natus
+                                illum incidunt quasi, aperiam eligendi iste illo
+                                soluta obcaecati repellendus, id libero
+                                excepturi explicabo corrupti ex placeat odit
+                                quidem!
+                            </p>
+                            <ul class="feature-best__list">
+                                <li class="feature-best__item">
+                                    <i
+                                        class="fa fa-home feature-best__icon"
+                                    ></i>
+                                    <h4 class="feature-best__title">
+                                        Non profitable organization
+                                    </h4>
+                                    <p
+                                        class="feature-best__desc text-clamp text-clamp--2"
+                                    >
+                                        Lorem ipsum dolor sit, amet consectetur
+                                        adipisicing elit. Impedit hic veniam
+                                        voluptatem cumque, ut earum corrupti
+                                        tempora ipsa corporis neque ratione.
+                                        Voluptatum eveniet nesciunt consequatur
+                                        tempora iste tempore aspernatur
+                                        praesentium.
+                                    </p>
+                                </li>
+                                <li class="feature-best__item">
+                                    <i
+                                        class="fa fa-home feature-best__icon feature-best__icon--red"
+                                    ></i>
+                                    <h4 class="feature-best__title">
+                                        Non profitable organization
+                                    </h4>
+                                    <p
+                                        class="feature-best__desc text-clamp text-clamp--2"
+                                    >
+                                        Lorem ipsum dolor sit, amet consectetur
+                                        adipisicing elit. Impedit hic veniam
+                                        voluptatem cumque, ut earum corrupti
+                                        tempora ipsa corporis neque ratione.
+                                        Voluptatum eveniet nesciunt consequatur
+                                        tempora iste tempore aspernatur
+                                        praesentium.
+                                    </p>
+                                </li>
+                                <li class="feature-best__item">
+                                    <i
+                                        class="fa fa-home feature-best__icon feature-best__icon--green"
+                                    ></i>
+                                    <h4 class="feature-best__title">
+                                        Non profitable organization
+                                    </h4>
+                                    <p
+                                        class="feature-best__desc text-clamp text-clamp--2"
+                                    >
+                                        Lorem ipsum dolor sit, amet consectetur
+                                        adipisicing elit. Impedit hic veniam
+                                        voluptatem cumque, ut earum corrupti
+                                        tempora ipsa corporis neque ratione.
+                                        Voluptatum eveniet nesciunt consequatur
+                                        tempora iste tempore aspernatur
+                                        praesentium.
+                                    </p>
+                                </li>
+                                <li class="feature-best__item">
+                                    <i
+                                        class="fa fa-home feature-best__icon feature-best__icon--blue"
+                                    ></i>
+                                    <h4 class="feature-best__title">
+                                        Non profitable organization
+                                    </h4>
+                                    <p
+                                        class="feature-best__desc text-clamp text-clamp--2"
+                                    >
+                                        Lorem ipsum dolor sit, amet consectetur
+                                        adipisicing elit. Impedit hic veniam
+                                        voluptatem cumque, ut earum corrupti
+                                        tempora ipsa corporis neque ratione.
+                                        Voluptatum eveniet nesciunt consequatur
+                                        tempora iste tempore aspernatur
+                                        praesentium.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="partner">
+                <div class="container partner__container">
+                    <h2 class="partner__title">Our business partner</h2>
+                    <ul class="partner__list">
+                        <li class="partner__item">
+                            <img
+                                src="./images/logo-amazon.png"
+                                alt=""
+                                class="partner__logo"
+                            />
+                        </li>
+                        <li class="partner__item">
+                            <img
+                                src="./images/logo-netflix.png"
+                                alt=""
+                                class="partner__logo"
+                            />
+                        </li>
+                        <li class="partner__item">
+                            <img
+                                src="./images/logo-newyork.png"
+                                alt=""
+                                class="partner__logo"
+                            />
+                        </li>
+                        <li class="partner__item">
+                            <img
+                                src="./images/logo-stripe.png"
+                                alt=""
+                                class="partner__logo"
+                            />
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="connect">
+                <div class="container">
+                    <h2 class="connect__title">
+                        For kids who enjoy theme selves
+                    </h2>
+                    <p class="connect__notice">
+                        Connect with us <span>@playground</span>
+                    </p>
+                    <ul class="connect__list">
+                        <li class="connect__item">
+                            <img src="./images/img9.png" alt="" class="connect__image">
+                        </li>
+                        <li class="connect__item">
+                            <img src="./images/img9.png" alt="" class="connect__image">
+                        </li>
+                        <li class="connect__item">
+                            <img src="./images/img9.png" alt="" class="connect__image">
+                        </li>
+                        <li class="connect__item">
+                            <img src="./images/img9.png" alt="" class="connect__image">
+                        </li>
+                    </ul>
                 </div>
             </section>
         </div>
